telegraf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf
  namespace: monitoring
spec:
  selector:
    app: telegraf
  ports:
    - port: 8125
      protocol: UDP
      targetPort: 8125
      name: port-8125
    - port: 8092
      protocol: UDP
      targetPort: 8092
      name: port-8092
    - port: 8094
      protocol: TCP
      targetPort: 8094
      name: port-8094
  sessionAffinity: None
  type: ClusterIP
