influxdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-service
  namespace: monitoring
spec:
  ingressClassName: haproxy
  rules:
  - host: demo-influxdb.example.net
    http:
      paths:
      - backend:
          service:
            name: influxdb
            port:
              number: 8086
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - demo-influxdb.example.net
status:
  loadBalancer:
    ingress:
    - {}
